@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-18T01:05:30Z",
-  "count_outdated" : 1058,
-  "uniques_outdated" : 616,
+  "timestamp" : "2024-02-19T01:02:57Z",
+  "count_outdated" : 1060,
+  "uniques_outdated" : 617,
   "count" : 1070,
   "uniques" : 623,
   "clones" : [
-    {
-      "timestamp": "2024-02-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-05T00:00:00Z",
       "count": 3,
